@@ -1,0 +1,8 @@
+AT+CMGR=3787
++CMGR: "REC READ", "+4369918353444", "2009/8/18,19:11:45"
+Hoewfliepl jookfotu oediutocou noabd fjumuywuncuzx lqutyehw. Joifdykojgdh pyigypaslp jomxuauxosiau arhi ludiqigitoda rivwitumaxy jyokigebxeqir.
+Zxeuluhp isluqlinushceg Styonwy jy uhu ibwypejkenobuo zitkizaruamim jbis dytiuiryuzil jeisviz zuoyrs. Leay agjyicify dojip-yfucqoguwx soxujdeh qyg R.
+.ginyea jpae ryk huywxeqyraeo enyvkymyscepae jeweimqizp afu fiysy.
+Noytaj. 
+OK
+
