@@ -24,6 +24,7 @@ ChangeLog
 [-] * CPIN reply is handled like regular one except in A2D case (bug #994).
 [-] * Fix finding first empty position when memory is empty (bug #996).
 [-] * Fixed parsing of SMS status reports.
+[-] * Fixed parsing of text messages with new lines (bug #995).
     
 20090904 - 1.26.0
 
